Fixed horizontal scrolling

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,5 +1,5 @@
 .content {
-  width: 100%;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
   align-items: center;
