--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -17,6 +17,6 @@
     flex-direction: column;
     padding: 64px 0 24px 16px;
     align-items: flex-start;
-    width: 100%;
+    width: calc(100% - 2 * 16px);
   }
 }
