--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,6 +8,5 @@
   flex-direction: column;
   align-items: center;
   min-width: 320px;
-  max-width: 1280px;
 }
 
